Whitespace adding bug fixed

--- a/src/components/Topic.css
+++ b/src/components/Topic.css
@@ -5,6 +5,8 @@
   border: 2px solid;
   
   box-sizing: border-box;
+
+  overflow-x: hidden;/*Used to remove whitespaces*/
 }
 
 .text{
